fix(testcase):Fixed test case and alignment issue

--- a/src/components/molecules/WeatherCol.css
+++ b/src/components/molecules/WeatherCol.css
@@ -45,7 +45,6 @@
         justify-content: center;
         gap: 15px;
         max-width: 800px;
-        height: 60%;
     }
     .column {
         width: 120px;
@@ -58,4 +57,7 @@
         border: 1px solid #ccc;
         border-radius: 5px;
     }
+    .columns-height {
+        height: 60%
+    } ;
 }
